--- a/Startaprr/index.html
+++ b/Startaprr/index.html
@@ -17,6 +17,15 @@
     <meta name="msapplication-navbutton-color" content="#000">
     <!--iOS Safari-->
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
+    <style type="text/css">
+      body {
+          opacity: 0;
+          overflow-x: hidden;
+      }
+      html {
+          background-color: #f9f9f9;
+      }
+    </style>
   </head>
   <body>
     <header class="header">
